Heading on "Our Reckz" page interfered with element, ended up altering. Started Creating contact us form on Contact Us Page. Chained anime poster on a genre, finalized.

--- a/comedy.html
+++ b/comedy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Reckz | PR</title>
+    <title>Comedy | PR</title>
     <!--<link rel="icon" href="images/shlg.webp"> <!--adds icon in page title-->
   </head>
   <body>
@@ -58,7 +58,7 @@
     <nav class="extPLinks">
     <ul>
     <li>
-    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.webp" alt="Facebook page link"></a>
+    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.png" alt="Facebook page link"></a>
     <a class="igLink" href="#"><img class="igLogo" src="images/iglogo" alt="Instagram page link"></a>
     <a class="liLink" href="#"><img class="tiktokLogo" src="images/tiktok.webp" alt="TikTok page link"></a>
     <a class="xLink" href="#"><img class="xLogo" src="images/xlogo.png" alt="X page link"></a>
