--- a/contact-us.html
+++ b/contact-us.html
@@ -33,56 +33,54 @@
 
   <div></div>
    <main>
-    <h1 class="pageheading">This is Contact Us!</h1>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
+    <h4>Got a Question?</h4>
+    <p>We're here to help with any queries you may have, looking forward to hearing from you!</p>
+    <section>
+    <article class="wrapper">
+      <h2>Contact Us</h2>
+      <div id="error_message">
+      </div>
+      <form action=""
+            id="myform"
+            onsubmit="return validate();">
+          <div class="input_field">
+              <input type="text"
+                     placeholder="First Name"
+                     id="fname">
+          </div>
+          <div class="input_field">
+            <input type="text"
+                   placeholder="Last Name"
+                   id="sname">
+          </div>
+          <div class="input_field">
+            <input type="text"
+                   placeholder="Mobile Number"
+                   id="mobn">
+          </div>
+          <div class="input_field">
+            <input type="text"
+                   placeholder="Email Address"
+                   id="emadd">
+          </div>
+          <div class="input_field">
+             <textarea placeholder="Message"
+                       id="message">
+             </textarea>
+          </div>
+          <div class="btn">
+              <input type="submit">
+          </div>
+      </form>
+    </article>
+    </section>
 
   </main>
     <footer>
     <nav class="extPLinks">
     <ul>
     <li>
-    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.webp" alt="Facebook page link"></a>
+    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.png" alt="Facebook page link"></a>
     <a class="igLink" href="#"><img class="igLogo" src="images/iglogo" alt="Instagram page link"></a>
     <a class="liLink" href="#"><img class="tiktokLogo" src="images/tiktok.webp" alt="TikTok page link"></a>
     <a class="xLink" href="#"><img class="xLogo" src="images/xlogo.png" alt="X page link"></a>
