--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <nav class="extPLinks">
     <ul>
     <li>
-    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.webp" alt="Facebook page link"></a>
+    <a class="fbLink" href="#"><img class="fbLogo" src="images/fblogo.png" alt="Facebook page link"></a>
     <a class="igLink" href="#"><img class="igLogo" src="images/iglogo" alt="Instagram page link"></a>
     <a class="liLink" href="#"><img class="tiktokLogo" src="images/tiktok.webp" alt="TikTok page link"></a>
     <a class="xLink" href="#"><img class="xLogo" src="images/xlogo.png" alt="X page link"></a>
