Was unable to achieve desired pop up effects. Will need to create more pages for anime choices. Colour theme still not finalized.

--- a/contact-us.html
+++ b/contact-us.html
@@ -45,28 +45,28 @@
             onsubmit="return validate();">
           <div class="input_field">
               <input type="text"
-                     placeholder="First Name"
+                     placeholder="Name"
                      id="fname">
           </div>
           <div class="input_field">
             <input type="text"
-                   placeholder="Last Name"
+                   placeholder="Surname"
                    id="sname">
           </div>
           <div class="input_field">
             <input type="text"
-                   placeholder="Mobile Number"
-                   id="mobn">
+                   placeholder="Subject..."
+                   id="subject">
           </div>
+          <div class="input_field">
           <div class="input_field">
             <input type="text"
                    placeholder="Email Address"
                    id="emadd">
           </div>
           <div class="input_field">
-             <textarea placeholder="Message"
-                       id="message">
-             </textarea>
+             <textarea placeholder="Message..."
+                       id="message"></textarea><!--placeholder will not show unless </textarea> is on the same line as the end of the code.-->
           </div>
           <div class="btn">
               <input type="submit">
