--- a/f-ma.html
+++ b/f-ma.html
@@ -35,9 +35,8 @@
    <main>
     <h1 class="pageheading">Fighting/Martial Arts!</h1>
     <div></div>
-    <wbr>
     <section>
-    <article class="a1">
+    <article>
     <img class="dbz" src="images/dragonballz.jpg" alt="Cover of the Dragon Ball Z series">
     <figcaption>Dragon Ball Z</figcaption>
     </article>
@@ -72,6 +71,6 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <!--<script src="scripts/main.js"></script>-->
+    <script src="scripts/main-f-ma.js"></script>
   </body>
 </html>    
