--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
     <p class="copyright">©2024 by Peak Reckz Ltd</p>
     </footer>
-    <link href="styles\hstyle.css" rel="stylesheet" />
+    <link href="styles\indexstyle.css" rel="stylesheet" />
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
