18+ Warning added to relevant genre button choice -on all pages Breakthrough made on article-information issue Further got rid of/shortened unnecessary code

--- a/h-s.html
+++ b/h-s.html
@@ -17,14 +17,14 @@
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="f-ma.html">Fighting/Martial Arts</a>
-      <a href="b-a.html">Battle/Action</a>
-      <a href="comedy.html">Comedy</a>
-      <a href="sports.html">Sports</a>
-      <a href="sci-fi.html">Sci-Fi/Fantasy</a>
-      <a href="h-s.html">Horror/Supernatural</a>
-      <a href="drama.html">Drama</a>
-      <a href="music.html">Music</a>
+      <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
+      <a class="ba" href="b-a.html">Battle/Action</a>
+      <a class="cmd" href="comedy.html">Comedy</a>
+      <a class="spt" href="sports.html">Sports</a>
+      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="horrs" href="h-s.html">Horror/Supernatural</a>
+      <a class="drm" href="drama.html">Drama</a>
+      <a class="ms" href="music.html">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
@@ -36,21 +36,33 @@
     <h1 class="pageheading">Horror/Supernatural!</h1>
     <div></div>
     <section>
-    <article class="a1">
+    <article onclick="myFunction1()">
     <img class="csm" src="images/csm.jpg" alt="Cover of the Chainsaw Man series.">
     <figcaption>Chainsaw Man</figcaption>
+    <div id="myInfo1" class="infoHide1">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
-    <article class="a2">
+    <article onclick="myFunction2()">
     <img class="tyg" src="images/tyg.jpg" alt="Cover of the Tokyo Ghoul series.">
     <figcaption>Tokyo Ghoul</figcaption>
+    <div id="myInfo2" class="infoHide2">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
-    <article class="a3">
+    <article onclick="myFunction3()">
     <img class="berserk" src="images/berserk.jpg" alt="Cover of the Berserk series.">
     <figcaption>Berserk</figcaption>
+    <div id="myInfo3" class="infoHide3">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
-    <article class="a4">
+    <article onclick="myFunction4()">
     <img class="tpn" src="images/tpnl.jpg" alt="Cover of The Promised Neverland series.">
     <figcaption>The Promised Neverland</figcaption>
+    <div id="myInfo4" class="infoHide4">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
     </section>
   </main>
@@ -71,6 +83,6 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <script src="scripts/h-s.js"></script>
+    <script src="scripts/main-h-s.js"></script>
   </body>
 </html>    
