--- a/comedy.html
+++ b/comedy.html
@@ -17,14 +17,14 @@
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
     <div class="dropdown-links">
       <strong>Genres</strong>
-      <a href="f-ma.html">Fighting/Martial Arts</a>
-      <a href="b-a.html">Battle/Action</a>
-      <a href="comedy.html">Comedy</a>
-      <a href="sports.html">Sports</a>
-      <a href="sci-fi.html">Sci-Fi/Fantasy</a>
-      <a href="h-s.html">Horror/Supernatural</a>
-      <a href="drama.html">Drama</a>
-      <a href="music.html">Music</a>
+      <a class="fma" href="f-ma.html">Fighting/Martial Arts</a>
+      <a class="ba" href="b-a.html">Battle/Action</a>
+      <a class="cmd" href="comedy.html">Comedy</a>
+      <a class="spt" href="sports.html">Sports</a>
+      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="horrs" href="h-s.html">Horror/Supernatural</a>
+      <a class="drm" href="drama.html">Drama</a>
+      <a class="ms" href="music.html">Music</a>
     </div></li>
     <li><a class="pageNav3" href="contact-us.html" alt="Link button to contact us page">Contact Us</a></li>
   </ul>
@@ -36,21 +36,33 @@
     <h1 class="pageheading">Comedy!</h1>
     <div></div>
     <section>
-    <article class="a1">
+    <article onclick="myFunction1()">
     <img class="op" src="images/one-piece.png" alt="Cover of the One Piece series">
     <figcaption>Naruto</figcaption>
+    <div id="myInfo1" class="infoHide1">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
-    <article class="a2">
+    <article onclick="myFunction2()">
     <img class="opm" src="images/opm.jpg" alt="Cover of the One Punch Man">
     <figcaption>One Punch Man</figcaption>
+    <div id="myInfo2" class="infoHide2">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
-    <article class="a3">
+    <article onclick="myFunction3()">
     <img class="knsb" src="images/konosuba.jpg" alt="Cover of the Konosuba: God's Blessing on this Wonderful World series.">
     <figcaption>Konosuba: God's Blessing on this Wonderful World</figcaption>
+    <div id="myInfo3" class="infoHide3">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
-    <article class="a4">
+    <article onclick="myFunction4()">
     <img class="kthr" src="images/katekyohr.jpg" alt="Cover of the Katekyo Hitman: Reborn! series">
     <figcaption>Katekyo Hitman Reborn!</figcaption>
+    <div id="myInfo4" class="infoHide4">
+    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    </div>
     </article>
     </section>
   </main>
@@ -71,6 +83,6 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <!--<script src="scripts/main.js"></script>-->
+    <script src="scripts/main-comedy.js"></script>
   </body>
 </html>    
